--- a/JQuery/Accordion/index.html
+++ b/JQuery/Accordion/index.html
@@ -10,7 +10,7 @@
 
 <div class="accordion">
 	<section class="accordion_item">
-		<div class="title_block">Who is creativia</div>
+		<div class="title_block active_block">Who is creativia</div>
 		<div class="info">
 			<p class="info_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
 		</div>
