--- a/template for site/app/index.html
+++ b/template for site/app/index.html
@@ -8,19 +8,14 @@
   <title>Name</title>
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="css/style.min.css" />
-  <link rel="stylesheet" href="css/animate.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
 
-<h1>dfdf</h1>
-<a href="">ddd</a>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/jquery-3.4.1.min.js"></script>
-	<script type="js/libs.min.js"></script>
+	<script src="js/libs.min.js"></script>
 	<script src="js/main.js"></script>
-	<!-- <script src="js/slick.js"></script> -->
 	<script src="https://kit.fontawesome.com/3e99ed63dd.js" crossorigin="anonymous"></script>
 </body>
 </html>
