added new templates

--- a/JQuery/header-scroll/index.html
+++ b/JQuery/header-scroll/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Burger menu</title>
+	<title>Header BG Scroll</title>
 	 <link rel="stylesheet" href="css/style.css" />
 	 <link rel="stylesheet" href="css/normalize.css" />
 </head>
@@ -12,21 +12,14 @@
 		<div class="container">
 			<div class="header__inner">
 				<a href="#home" class="logo">
-					Logo Site
+					Logo
 				</a>
-				<!--Burger-menu-->
-				<div class="menu__burger">
-					<span></span>
-				</div>
-				<!--Burger-menu-end-->
 				<nav class="header-menu" id="menu">
 					<ul class="menu__list">                                     
 						<li class="menu__item"><a href="#home" class="menu__link">home</a></li>
 						<li class="menu__item"><a href="#about" class="menu__link">about us</a></li>
-						<li class="menu__item"><a href="#portfolio" class="menu__link">PORTFOLIO </a></li>
 						<li class="menu__item"><a href="#clients" class="menu__link">clients</a></li>
 						<li class="menu__item"><a href="#team" class="menu__link">team</a></li>
-						<li class="menu__item"><a href="" class="menu__link">services</a></li>
 						<li class="menu__item"><a href="#blog" class="menu__link">Blog</a></li>
 						<li class="menu__item"><a href="#contact" class="menu__link">Contact</a></li>
 					</ul>
@@ -34,6 +27,11 @@
 			</div>
 		</div>
 	</header><!--header-end-->
+
+	<section class="banner">
+
+	</section>
+
 
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
