--- a/JQuery/left-menu/index.html
+++ b/JQuery/left-menu/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Burger menu</title>
+	<title>Left menu</title>
 	 <link rel="stylesheet" href="css/style.css" />
 	 <link rel="stylesheet" href="css/normalize.css" />
 </head>
@@ -38,7 +38,6 @@
 
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/main.js"></script>
 
 </body>
