--- a/JQuery/parallax-scrolling/index.html
+++ b/JQuery/parallax-scrolling/index.html
@@ -8,43 +8,39 @@
 </head>
 <body>
 
-	<div class="h1">Parallax without moves</div>
-
-	<div class="container">
-
-		<div class="parallax">
-			<h1>Name</h1>		
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
+		
+		<!-- scrolling without animation -->
+		<div class="parallax">	
+		<!-- text on img -->	
+			<div class="name">Without animation,just css</div>	
+		<!-- text on img end-->	
 		</div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
-		<div class="parallax">		
-		</div>
+		<!-- scrolling without animation end -->
 
-	</div>	
-	
-	<div class="h1">Parallax with moves</div>
-
-	<div class="container">
-
-		<div class="parallax-window"  data-parallax="scroll" data-image-src="img/parallax1.jpg">
-			<h1>Name</h1>		
+		<!-- scrolling with animation -->
+		<div class="parallax-window"  data-parallax="scroll" data-image-src="img/parallax.jpg">
+			<!-- text on img -->
+			<div class="name">With animation and js parallax.min</div>	
+			<!-- text on img end-->	
 		</div>		
+		<!-- scrolling end -->
+
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam blanditiis consectetur, dicta sapiente maiores adipisci ut sit, eius autem error quia quos similique praesentium optio possimus et mollitia suscipit temporibus facilis animi esse impedit. Ea, nihil ex ullam, temporibus id ratione veritatis dolor modi impedit aliquid quia, cupiditate sunt perferendis. Voluptas amet dolorum autem, tempora, minima incidunt repellendus, cupiditate voluptatibus at modi consequuntur doloribus. Voluptas nam debitis nihil cum officiis molestias perspiciatis similique commodi consequuntur suscipit, placeat eveniet temporibus obcaecati veritatis molestiae accusantium ab nemo asperiores blanditiis dolore! Molestias velit veritatis id minima, vitae et, suscipit laborum! Repellendus libero, voluptas.</p>
-		<div class="parallax-window" data-parallax="scroll" data-image-src="img/parallax3.jpg"></div>		
-	
-	</div>
+
+
 
 
 
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/parallax.min.js"></script>
-	<script src="js/main.js"></script>
 
 </body>
 </html>
