--- a/template for site/app/index.html
+++ b/template for site/app/index.html
@@ -13,7 +13,9 @@
 
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="js/jquery-3.4.1.min.js"></script>
+	<script>
+    window.jQuery || document.write('<script src="/js/jquery-3.4.1.min.js"><\/script>'))
+</script>
 	<script src="js/libs.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="https://kit.fontawesome.com/3e99ed63dd.js" crossorigin="anonymous"></script>
