--- a/template for site/app/index.html
+++ b/template for site/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
 	<meta charset=utf-8>
@@ -17,7 +17,7 @@
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
-    window.jQuery || document.write('<script src="/js/jquery-3.4.1.min.js"><\/script>'))
+    window.jQuery || document.write('<script src="/js/jquery-3.4.1.min.js"><\/script>')
 	</script>
 	<script src="js/libs.min.js"></script>
 	<script src="js/main.js"></script>
