Update template for site

--- a/JQuery/Accordion/index.html
+++ b/JQuery/Accordion/index.html
@@ -7,27 +7,45 @@
 </head>
 <body>
 	
+	<!-- accordion -->
+	<div class="accordion">
+		<!-- accordion__item -->
+		<section class="accordion__item">
+			<div class="accordion__item-title accordion__item-title--active">How to take care of your pets</div>
+			<div class="accordion__item-info">
+				<p class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
+			</div>
+		</section>
+		<!-- accordion__item end -->
 
-<div class="accordion">
-	<section class="accordion_item">
-		<div class="title_block active_block">Who is creativia</div>
-		<div class="info">
-			<p class="info_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
-		</div>
-	</section>
-	<section class="accordion_item">
-		<div class="title_block">Experiences</div>
-		<div class="info">
-			<p class="info_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
-		</div>
-	</section>
-	<section class="accordion_item">
-		<div class="title_block">Learn more</div>
-		<div class="info">
-			<p class="info_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
-		</div>
-	</section>
-</div>
+		<!-- accordion__item -->
+		<section class="accordion__item">
+			<div class="accordion__item-title">Get bathing in our vet bath</div>
+			<div class="accordion__item-info">
+				<p class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
+			</div>
+		</section>
+		<!-- accordion__item end -->
+
+		<!-- accordion__item -->
+		<section class="accordion__item">
+			<div class="accordion__item-title">Your pet is in good hands with us</div>
+			<div class="accordion__item-info">
+				<p class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
+			</div>
+		</section>
+		<!-- accordion__item end -->
+
+		<!-- accordion__item -->
+		<section class="accordion__item">
+			<div class="accordion__item-title">The best care takers of any kind of pets</div>
+			<div class="accordion__item-info">
+				<p class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
+			</div>
+		</section>
+		<!-- accordion__item end -->
+	</div>
+	<!-- accordion end -->
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
