Update accordion css and scss

--- a/JQuery/Accordion/index.html
+++ b/JQuery/Accordion/index.html
@@ -48,7 +48,7 @@
 	<!-- accordion end -->
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/accordion.js"></script>
 
 </body>
 </html>
