--- a/JQuery/Burger-menu/index.html
+++ b/JQuery/Burger-menu/index.html
@@ -14,27 +14,24 @@
 				<a href="#home" class="logo">
 					Logo Site
 				</a>
-				<!--Burger-menu-->
-				<div class="menu__burger">
-					<span></span>
+
+
+				<div class="header__menu menu">
+					<div class="menu__burger">
+						<span></span>
+					</div>
+					<nav class="menu__body" id="menu">
+						<ul class="menu__list">                                     
+							<li class="menu__item"><a class="menu__link" href=""></a></li>
+						</ul>
+					</nav>
 				</div>
-				<!--Burger-menu-end-->
-				<nav class="header-menu" id="menu">
-					<ul class="menu__list">                                     
-						<li class="menu__item"><a href="#home" class="menu__link">home</a></li>
-						<li class="menu__item"><a href="#about" class="menu__link">about us</a></li>
-						<li class="menu__item"><a href="#portfolio" class="menu__link">PORTFOLIO </a></li>
-						<li class="menu__item"><a href="#clients" class="menu__link">clients</a></li>
-						<li class="menu__item"><a href="#team" class="menu__link">team</a></li>
-						<li class="menu__item"><a href="" class="menu__link">services</a></li>
-						<li class="menu__item"><a href="#blog" class="menu__link">Blog</a></li>
-						<li class="menu__item"><a href="#contact" class="menu__link">Contact</a></li>
-					</ul>
-				</nav>
+
 			</div>
 		</div>
 	</header><!--header-end-->
 
+	
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
