--- a/css/tooltips/index.html
+++ b/css/tooltips/index.html
@@ -9,10 +9,10 @@
 <body>
 	<div class="container">
 		<ul>
-			<li><span class="tooltip"><span class="tooltip_text top">some text</span>top</span> text</li>
-			<li><span class="tooltip"><span class="tooltip_text bottom">bottom</span> bottom</span> text</li>
-			<li><span class="tooltip"><span class="tooltip_text left">left</span> left</span> text</li>
-			<li><span class="tooltip"><span class="tooltip_text right">right</span> right</span> text</li>
+			<li><span class="tooltip"><span class="tooltip_text top">some text</span>top text</span></li>
+			<li><span class="tooltip"><span class="tooltip_text bottom">bottom</span> bottom text</span></li>
+			<li><span class="tooltip"><span class="tooltip_text left">left</span> left text</span></li>
+			<li><span class="tooltip"><span class="tooltip_text right">right</span> right text</span></li>
 		</ul>
 
 
