--- a/new-gulp-template/app/_js.html
+++ b/new-gulp-template/app/_js.html
@@ -2,5 +2,6 @@
 	<script>
 		window.jQuery || document.write('<script src="/js/jquery-3.4.1.min.js"><\/script>')
 	</script> -->
-	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/libs.min.js"></script>
 	<script src="js/script.min.js"></script>
+	<!-- <script>svg4everybody();</script> -->
