--- a/JQuery/Accordion/index.html
+++ b/JQuery/Accordion/index.html
@@ -3,46 +3,46 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Accordion</title>
-	 <link rel="stylesheet" href="css/style.css" />
+	 <link rel="stylesheet" href="css/accordion.css" />
 </head>
 <body>
 	
 	<!-- accordion -->
 	<div class="accordion">
 		<!-- accordion__item -->
-		<section class="accordion__item">
-			<div class="accordion__item-title accordion__item-title--active">How to take care of your pets</div>
-			<div class="accordion__item-info">
-				<p class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
+		<div class="accordion__item accordion__item--active">
+			<div class="accordion__item-title">Title</div>
+			<div class="accordion__item-content">
+				<div class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</div>
 			</div>
-		</section>
+		</div>
 		<!-- accordion__item end -->
 
 		<!-- accordion__item -->
-		<section class="accordion__item">
-			<div class="accordion__item-title">Get bathing in our vet bath</div>
-			<div class="accordion__item-info">
-				<p class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
+		<div class="accordion__item">
+			<div class="accordion__item-title">Title</div>
+			<div class="accordion__item-content">
+				<div class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</div>
 			</div>
-		</section>
+		</div>
 		<!-- accordion__item end -->
 
 		<!-- accordion__item -->
-		<section class="accordion__item">
-			<div class="accordion__item-title">Your pet is in good hands with us</div>
-			<div class="accordion__item-info">
-				<p class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
+		<div class="accordion__item">
+			<div class="accordion__item-title">Title</div>
+			<div class="accordion__item-content">
+				<div class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</div>
 			</div>
-		</section>
+		</div>
 		<!-- accordion__item end -->
 
 		<!-- accordion__item -->
-		<section class="accordion__item">
-			<div class="accordion__item-title">The best care takers of any kind of pets</div>
-			<div class="accordion__item-info">
-				<p class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</p>
+		<div class="accordion__item">
+			<div class="accordion__item-title">Title</div>
+			<div class="accordion__item-content">
+				<div class="accordion__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et dolor justo. Phasellus eu ligula ac nisl volutpat tincidunt. Vestibulum vitae rhoncus odio Fusce sed enim erat. Mauris dictum lorem eu tortor porta placerat. Suspendisse ac vestibulum eros.</div>
 			</div>
-		</section>
+		</div>
 		<!-- accordion__item end -->
 	</div>
 	<!-- accordion end -->
