--- a/gulp-assembly/app/_pagination.html
+++ b/gulp-assembly/app/_pagination.html
@@ -1,21 +1,21 @@
-<div class="pagging">
-	<a class="pagging__arrow" href=""></a>
-	<ul class="pagging__list">
+<div class="pagination">
+	<a class="pagination__arrow" href=""></a>
+	<ul class="pagination__list">
 		<li>
-			<a class="pagging__link pagging__link--active" href="#">1</a>
+			<a class="pagination__link pagination__link--active" href="#">1</a>
 		</li>
 		<li>
-			<a class="pagging__link" href="#">2</a>
+			<a class="pagination__link" href="#">2</a>
 		</li>
 		<li>
-			<a class="pagging__link" href="#">3</a>
+			<a class="pagination__link" href="#">3</a>
 		</li>
 		<li>
-			<a class="pagging__link" href="#">4</a>
+			<a class="pagination__link" href="#">4</a>
 		</li>
 		<li>
-			<a class="pagging__link" href="#">5</a>
+			<a class="pagination__link" href="#">5</a>
 		</li>
 	</ul>
-	<a class="pagging__arrow" href=""></a>
+	<a class="pagination__arrow" href=""></a>
 </div>
